# agent_orchestration_echo

./: .gitignore  README.md  cleanup.py  cleanup.sh  deploy.py  deploy.sh  enable_bedrock_model.py
cloudformation/: cognito.yaml  documents_agent.yaml  echo_ink_agent.yaml  echo_prepare_agent.yaml  host_agent.yaml  monitoring_agent.yaml  video_agent.yaml  web_search_agent.yaml
documents_strands_agent/: Dockerfile  __init__.py  agent.py  agent_executor.py  analytics_tools.py  document_context_tools.py  main.py  requirements.txt  session_tools.py  utils.py
documents_strands_agent/prompt/: __init__.py
documents_strands_agent/scripts/: get_m2m_token.py
echo_ink_agent/: Dockerfile  README.md  agent.py  agent_executor.py  document_tools.py  echo_ink_orchestrator.py  example_usage.py  interactive_demo.py  main.py  memory_hook.py  pyproject.toml  requirements.txt  session_storage.py  templates.py  test_echo_ink.py
echo_ink_agent/prompt/: __init__.py
echo_prepare_agent/: agent.py  agent_executor.py  document_retrieval.py  document_storage.py  main.py  pyproject.toml  session_manager.py  tools.py
echo_prepare_agent/prompt/: __init__.py
frontend/: .env
host_strands_agent/: agent.py  agent_executor.py  main.py  pyproject.toml  requirements.txt  test_strands_agent.py
host_strands_agent/prompt/: __init__.py
test/: .agentcore.json  connect_agent.py
video_strands_agent/: Dockerfile  __init__.py  agent.py  agent_executor.py  main.py  utils.py  video_tools.py
video_strands_agent/prompt/: __init__.py
video_strands_agent/scripts/: get_m2m_token.py
(+3 files in other folders)
